--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 body {
-  font-family: Inter, system-ui, sans-serif;
-  background: #ffffff;
-  color: #262626;
+  @apply font-sans text-gray-800 bg-white;
+}
+h1, h2, h3 {
+  @apply font-heading;
 }
